# SEKURO_TUGAS_1_Hanif-Ikhsan-Salim_PROGRAMMING.-

src/cmake_soal/: CMakeLists.txt
src/oop_soal_1/: core_mcu.cpp  core_mcu.hpp
src/stl_soal/: main.cpp
